--- a/test/Markdown.mdtest/013-Blockquote.html
+++ b/test/Markdown.mdtest/013-Blockquote.html
@@ -1,10 +1,4 @@
-<p>Markdown uses email-style > characters for blockquoting. If you're familiar with quoting passages of text in an email message, then you know how to create a blockquote in Markdown. It looks best if you hard wrap the text and put a > before every line:</p>
-<blockquote>
-	<p>This is a blockquote with two paragraphs.</p>
-	<p>Donec sit amel nisl.</p>
-</blockquote>
-<p>Markdown allows you to be lazy and only put the > before the first line of a hard-wrapped paragraph:</p>
-<blockquote>
-	<p>This is a blockquote with two paragraphs. Even though line 2 doesn't start with a > character, it is still part of the blockquote.</p>
-	<p>Second paragraph of the same blockquote.</p>
-</blockquote>
+<p>Markdown uses email-style > characters for blockquoting. If you're familiar with quoting passages of text in an email message, then you know how to create a blockquote in Markdown.</p>
+<blockquote><p>This is a simple blockquote.</p></blockquote>
+<p>There are more advanced blockquote concepts that are planned to be supported in future versions of this simplified parser.</p>
+<blockquote><p>Coming soon...</p></blockquote>
